<resources>
    <string name="app_name">Singidroid 4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="vesti">News</string>
    <string name="stranice_predmeta">Subject Page</string>
    <string name="stanje_studentsko_racuna">Student Bill State</string>
    <string name="tekuci_racuni">University Bills</string>
    <string name="lokacija_univerziteta_singidunum">Singidunum Univeristy Location</string>
    <string name="kontakt_podaci">Contact info</string>
    <string name="o_aplikaciji">About the app</string>
    <string name="change_news_source">Change News Source</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="refreshing">Refreshing</string>
    <string name="loading_content_error">Error was encountered while trying to load content</string>
    <string name="back_notification">Tap back button twice in order to exit</string>
    <string name="appinit_init_skip">"Do you want to skip App Init ? "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="predmet_dialog_faculty">Faculty:</string>
    <string name="predmet_dialog_year">Year:</string>
    <string name="predmet_dialog_course">Course:</string>
    <string name="predmet_dialog_neutral">Save as default</string>
    <string name="index_number">Index Number</string>
    <string name="email_subject" translatable="false"/>
    <string name="email" translatable="false"/>
    <string name="jmbg_less_than_13">JMBG field is less than 13</string>
    <string name="index_less_than_10">Index field is less than 10</string>
    <string name="jmbg_field_empty">JMBG field is empty</string>
    <string name="index_field_empty">Index field is empty</string>
    <string name="empty_fields_somehow">Some of the field seem to be empty somehow?</string>
    <string name="do_you_continue">\" Do you want to continue?\"</string>
    <string name="cert_not_yet_valid">Certificate isn\'t yet valid.</string>
    <string name="cert_id_missmatch">Certificate ID missmatch.</string>
    <string name="cert_expired">Certificate expired.</string>
    <string name="cert_not_trusted">Certificate isn\'t trusted.</string>
    <string name="cert_error_title">SSL Certificate Error</string>
    <string name="continue_prompt">Continue</string>
    <string name="appinit_confirm_done_text">Are you sure that you want to commit those selected options?</string>
    <string name="appinit_title">Done?</string>
    <string name="appinit_skip">Skip?</string>
    <string name="subject_change_title">Change major</string>
    <string name="opening_in_browser">Opening in browser</string>
    <string name="button_submit">Submit</string>
    <string name="save_info">Save info</string>
    <string name="copy_email_notif">Copied email!</string>
    <string name="copy_phone_number_notif">Copied phone number!</string>

    <string-array name="uni_locations">
        <item>Univerzitet Singidunum Danijelova</item>
        <item>Univerzitet Singidunum Kumodraska</item>
        <item>Centar Novi Sad</item>
        <item>Centar Nis</item>
        <item>Centar Zlatibor</item>
    </string-array>

</resources>
