<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_vesti"
              android:icon="@drawable/ic_newspaper"
              android:title="@string/vesti"
              app:actionLayout="@layout/menu_dot"
        />
        <item android:id="@+id/nav_stranice_predmeta"
              android:icon="@drawable/ic_stranica_predmeta"
              android:title="@string/stranice_predmeta"/>
        <item android:id="@+id/nav_rasporedi_predavanja"
              android:icon="@drawable/ic_class_schedule"
              android:title="@string/raspored_predavanja"/>
        <item android:id="@+id/nav_rasporedi_konsultacija"
              android:icon="@drawable/ic_consultation"
              android:title="@string/rasporedi_konsultacija"/>
        <item android:id="@+id/nav_student_stanje"
              android:icon="@drawable/ic_wallet"
              android:title="@string/stanje_studentsko_racuna"/>
        <item android:id="@+id/nav_tekuci_racun"
              android:icon="@drawable/ic_money"
              android:title="@string/tekuci_racuni"/>
        <item android:id="@+id/nav_lokacija"
              android:icon="@drawable/ic_location"
              android:title="@string/lokacija_univerziteta_singidunum"/>
        <item android:id="@+id/nav_kontakt"
              android:icon="@drawable/ic_contact_info"
              android:title="@string/kontakt_podaci"/>
        <item android:id="@+id/nav_o_aplikaciji"
              android:icon="@drawable/ic_info"
              android:title="@string/o_aplikaciji"/>
    </group>


</menu>